--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -105,8 +105,13 @@ a {
   width: auto;
 }
 
+.about-text {
+	margin: 10px 0 50px 0;
+}
 
-
+.education-text {
+	margin: 25px 0;
+}
 
 //Projects 
 
